--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -113,6 +113,11 @@
         > span {
           font-size: 16px;
         }
+
+        .totem {
+          font-weight: bold;
+          text-decoration: underline;
+        }
       }
 
       .pokemonDetails {
