--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -62,6 +62,11 @@
 
   .container {
     height: calc(100% - 42px);
+
+    @media (max-width: 550px) {
+      margin-left: 0.5em !important;
+      margin-right: 0.5em !important;
+    }
   }
 
   .tabs {
@@ -90,6 +95,11 @@
       background-color: var(--bgsecondary);
       transition: all 500ms;
       border: none;
+
+      @media (max-width: 550px) {
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+      }
     }
   }
 
