Abstracted popup into pokeinfo component, badge style fixes, faint detail fixes

--- a/src/components/Pokestats/Pokestats.module.scss
+++ b/src/components/Pokestats/Pokestats.module.scss
@@ -101,10 +101,13 @@
           }
         }
 
-        .name {
+        .memberText {
+          display: flex;
+          justify-content: space-evenly;
           font-weight: bold;
           position: relative;
           z-index: 1;
+          width: 100%;
         }
 
         .lineOne {
