--- a/src/components/Badges/Badges.module.scss
+++ b/src/components/Badges/Badges.module.scss
@@ -57,8 +57,8 @@
       position: absolute;
       right: 3.5px;
       top: 3.5px;
-      background-color: transparent;
-      border: 1px solid #333;
+      border: 2px solid #333;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       font-size: 12px;
       width: 24px;
       height: 24px;
@@ -66,9 +66,17 @@
       padding: 0;
       margin: 0;
 
+      &:hover {
+        background-color: #333;
+        > i {
+          color: #fff;
+        }
+      }
+
       > i {
         height: unset;
         margin: 0;
+        font-weight: bold;
       }
     }
   }
