--- a/src/components/Summary/Summary.module.scss
+++ b/src/components/Summary/Summary.module.scss
@@ -1,116 +1,237 @@
 .container {
-  display: grid;
-  place-items: center;
-  overflow: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  gap: 10px;
 
-  .summary {
+  .options {
     display: flex;
-    flex-flow: column nowrap;
-    width: 1000px;
-    min-width: 1000px;
-    max-width: 1000px;
-    gap: 10px;
+    width: 100%;
+  }
 
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: var(--header) !important;
-      color: var(--contrast);
-      padding: 20px;
-      font-size: 24px;
+  .inner {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 5px;
+    width: 100%;
+    overflow: auto;
 
-      .badges {
-        display: flex;
-        flex-flow: row wrap;
+    .settings {
+      width: 300px;
+      height: fit-content;
 
-        gap: 3px;
-        max-width: 300px;
+      > div {
+        width: 300px;
+      }
 
-        .badge {
-          height: 28px;
-          width: 28px;
-          filter: brightness(0.2);
-
-          &.active {
-            filter: brightness(1);
-          }
-        }
+      .textarea {
+        width: 100%;
+        resize: none;
       }
     }
 
-    .row {
+    .summary {
       display: flex;
-      flex-flow: row nowrap;
-      gap: 25px;
-    }
-
-    .card {
-      display: flex;
+      flex: 1;
       flex-flow: column nowrap;
-      padding: 20px;
-      box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
-      background-color: var(--card);
-      color: var(--contrast);
-      border-radius: 2px;
+      width: 1150px;
+      min-width: 1150px;
+      max-width: 1150px;
+      gap: 10px;
+      background-color: var(--bgsecondary);
+      padding: 5px;
 
-      &.small {
-        width: 240px;
-      }
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: var(--header) !important;
+        color: var(--contrast);
+        padding: 15px 20px;
+        font-size: 24px;
 
-      &.medium {
-        width: 490px;
-      }
+        .headerTitle {
+          max-width: 225px;
+        }
 
-      &.large {
-        width: 740px;
-      }
+        .badges {
+          display: flex;
+          flex-flow: row wrap;
+          gap: 3px;
+          max-width: 300px;
 
-      .title {
-        font-size: 18px;
-        margin-bottom: 8px;
-      }
+          .badge {
+            height: 28px;
+            width: 28px;
+            filter: brightness(0.2);
 
-      .team {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        column-gap: 10px;
-
-        .pokemon {
-          display: grid;
-          grid-template-columns: 80px minmax(auto, 135px) minmax(0, 1fr);
-          column-gap: 10px;
-          padding: 5px 0;
-          margin-bottom: 10px;
-          border-bottom: 1px solid var(--contrast);
-          > img {
-            height: 80px;
-            width: 80px;
-            object-fit: cover;
-            align-self: center;
+            &.active {
+              filter: brightness(1);
+            }
           }
         }
       }
 
-      .stat {
+      .row {
         display: flex;
         flex-flow: row nowrap;
-        justify-content: center;
-        padding: 5px;
-        align-items: center;
-        gap: 10px;
-        border: 1px solid var(--contrast);
-        border-radius: 4px;
-        margin-bottom: 10px;
-        > svg {
-          width: 22px;
-          height: 22px;
+        gap: 25px;
+      }
+
+      .card {
+        display: flex;
+        flex-flow: column nowrap;
+        padding: 15px 20px;
+        box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
+        background-color: var(--card);
+        color: var(--contrast);
+        border-radius: 2px;
+
+        &.small {
+          flex-basis: 25%;
         }
 
-        :global(.ui.label) {
-          background-color: #999;
-          color: #fff;
+        &.medium {
+          flex-basis: 50%;
         }
+
+        &.large {
+          flex-basis: 75%;
+        }
+
+        .title {
+          font-size: 18px;
+          margin-bottom: 8px;
+        }
+
+        .team {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          column-gap: 8px;
+
+          .pokemon {
+            display: grid;
+            grid-template-columns: 80px minmax(auto, 160px) minmax(0, 1fr);
+            column-gap: 10px;
+            padding: 3px 0;
+            margin-bottom: 5px;
+            border-bottom: 1px solid var(--contrast);
+            > img {
+              height: 80px;
+              width: 80px;
+              object-fit: cover;
+              align-self: center;
+            }
+          }
+        }
+
+        .stat {
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          padding: 5px;
+          align-items: center;
+          gap: 10px;
+          border: 2px solid var(--contrast);
+          border-radius: 4px;
+          margin-bottom: 10px;
+          font-size: 16px;
+          > svg {
+            width: 22px;
+            height: 22px;
+          }
+
+          :global(.ui.label) {
+            background-color: #999;
+            color: #fff;
+          }
+        }
+
+        .encounters {
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: space-evenly;
+          gap: 10px;
+
+          .completion {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            margin-top: 10px;
+
+            > b {
+              font-size: 16px;
+              color: var(--badge);
+            }
+
+            .circle {
+              .circlebg {
+                fill: none;
+                stroke: #ddd;
+              }
+              .progress {
+                fill: none;
+                stroke: var(--badge);
+                stroke-linecap: round;
+                stroke-linejoin: round;
+              }
+
+              .text {
+                font-size: 3em;
+                font-weight: bold;
+                fill: var(--badge);
+              }
+            }
+          }
+
+          .byType {
+            display: flex;
+            flex-flow: column nowrap;
+            justify-content: space-evenly;
+
+            .byTypeContainer {
+              display: grid;
+              grid-template-columns: 1fr 1fr 1fr 1fr;
+              column-gap: 8px;
+              row-gap: 8px;
+
+              .type {
+                text-align: center;
+                height: 24px;
+                min-width: 90px;
+                padding: 3px;
+                border-radius: 8px;
+                color: black;
+                font-weight: bold;
+              }
+            }
+          }
+        }
+
+        .rules {
+          display: flex;
+          flex-flow: column nowrap;
+
+          .rule {
+            display: flex;
+            flex-flow: row nowrap;
+            gap: 10px;
+            padding: 3px;
+            font-size: 12px;
+
+            .number {
+              font-weight: bold;
+              font-size: 16px;
+            }
+          }
+        }
+      }
+
+      .credit {
+        color: var(--contrast);
+        margin-left: auto;
       }
     }
   }
