--- a/src/components/Summary/Summary.module.scss
+++ b/src/components/Summary/Summary.module.scss
@@ -81,6 +81,7 @@
       .card {
         display: flex;
         flex-flow: column nowrap;
+        flex: 1;
         padding: 15px 20px;
         box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.075);
         background-color: var(--card);
