--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,16 +8,17 @@
     > div:first-child {
       display: grid;
       place-items: center;
+      order: 1;
       position: absolute;
       bottom: 5px;
       right: 5px;
-      order: 1;
+      width: 14px;
+      height: 14px;
+      padding-left: 1px;
       background-color: red;
       font-weight: bold;
       color: #ffffff;
       font-size: 9px;
-      width: 14px;
-      height: 14px;
       border-radius: 50%;
     }
   }
