modify style of sidebar button

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -80,6 +80,13 @@
     }
   }
 
+  .sidebarButton {
+    background-color: white;
+    border-style: none;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
   .container {
     height: calc(100% - 42px);
   }
