Initial implementation of team builder

--- a/src/components/Moves/Moves.module.scss
+++ b/src/components/Moves/Moves.module.scss
@@ -49,6 +49,11 @@
         }
       }
 
+      .moveType {
+        color: #333;
+        font-weight: bold;
+      }
+
       &.split {
         .moveType {
           border-bottom-right-radius: unset;
