--- a/src/components/Type/Type.module.scss
+++ b/src/components/Type/Type.module.scss
@@ -13,9 +13,10 @@
     gap: 5px;
 
     > span {
-      padding: 2.5px 4px;
+      padding: 2.5px 4.5px;
       border-radius: 3px;
-      color: #ffffff;
+      color: #333;
+      font-weight: bold;
     }
   }
 
