Included new google playstore button

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -102,10 +102,16 @@ h3 {
 
 .stores {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 10px;
 
-  > a {
-    height: 52px;
+  .playstore {
+    height: 85px;
+
+    > img {
+      height: 100%;
+    }
   }
 
   .microsoft {
