--- a/src/components/Detail/Detail.module.scss
+++ b/src/components/Detail/Detail.module.scss
@@ -14,6 +14,12 @@
     }
   }
 
+  .expandable {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 10px;
+  }
+
   img {
     height: 80px;
     width: 100px;
@@ -26,6 +32,7 @@
   }
 
   .dropdown {
+    min-height: unset !important;
     > i {
       top: 0 !important;
     }
