--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -4,6 +4,7 @@
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr);
   height: 100%;
+  min-height: calc(100vh - 215px);
   position: relative;
 
   .container {
