--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,76 +1,80 @@
-.newVersion {
-  :global(.text) {
-    background-color: #ffffcc;
-  }
-}
-
-h3 {
-  font-size: 20px;
-  color: #161e2e;
-  margin: 0;
-}
-
-.credits {
+.about {
   display: flex;
   flex-flow: column nowrap;
   gap: 5px;
-  height: 30%;
-  min-height: 100px;
+  height: 75vh;
+  max-height: 75vh;
+  font-size: 13px !important;
+  color: #718096;
   overflow: auto;
-  border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
-}
 
-.support {
-  display: flex;
-  flex-flow: row nowrap;
-  gap: 10px;
-
-  .patron {
-    -webkit-box-align: center;
-    align-items: center;
-    backface-visibility: hidden;
-    background-color: rgb(255, 66, 77);
-    border-radius: 9999px;
-    border: 1px solid rgb(255, 66, 77);
-    box-sizing: border-box;
-    cursor: pointer;
-    display: inline-flex;
-    font-weight: 500;
-    height: unset;
-    -webkit-box-pack: center;
-    justify-content: center;
-    padding: 0.3rem 0.8rem;
-    position: relative;
-    pointer-events: unset;
-    text-align: center;
-    text-decoration: none;
-    text-transform: none;
-    transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
-    user-select: none;
-    white-space: unset;
-    width: fit-content;
-    color: rgb(255, 255, 255) !important;
-    font-size: 0.875rem !important;
+  h3 {
+    font-size: 20px;
+    color: #161e2e;
+    margin: 0;
   }
-}
 
-.stores {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  gap: 10px;
+  .credits {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 5px;
+    margin: 0;
+    overflow: auto;
+    max-height: 45%;
+  }
 
-  .playstore {
-    height: 85px;
+  .support {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 10px;
 
-    > img {
-      height: 100%;
+    .patron {
+      -webkit-box-align: center;
+      align-items: center;
+      backface-visibility: hidden;
+      background-color: rgb(255, 66, 77);
+      border-radius: 9999px;
+      border: 1px solid rgb(255, 66, 77);
+      box-sizing: border-box;
+      cursor: pointer;
+      display: inline-flex;
+      font-weight: 500;
+      height: unset;
+      -webkit-box-pack: center;
+      justify-content: center;
+      padding: 0.3rem 0.8rem;
+      position: relative;
+      pointer-events: unset;
+      text-align: center;
+      text-decoration: none;
+      text-transform: none;
+      transition: all 300ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
+      user-select: none;
+      white-space: unset;
+      width: fit-content;
+      color: rgb(255, 255, 255) !important;
+      font-size: 0.875rem !important;
     }
   }
 
-  .microsoft {
-    width: 127px;
-    height: 52px;
+  .stores {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: 10px;
+
+    .playstore {
+      height: 85px;
+
+      > img {
+        height: 100%;
+      }
+    }
+
+    .microsoft {
+      width: 127px;
+      min-width: 85px;
+      height: 52px;
+    }
   }
 }
