--- a/src/components/Type/Type.module.scss
+++ b/src/components/Type/Type.module.scss
@@ -1,16 +1,30 @@
 .type {
   display: flex;
   align-items: center;
-  padding: 3px 4.5px;
-  color: #333;
+  height: 30px;
+  min-height: 30px;
   cursor: pointer;
   border: none;
-  border-radius: 3px;
+  padding: 0;
+  border-radius: 4px;
   font: inherit;
   font-weight: bold;
+  box-sizing: unset;
 
   > svg {
-    height: 100%;
+    padding: 0 2.5px;
     width: 24px;
+  }
+
+  .text {
+    display: grid;
+    place-items: center;
+    flex: 1;
+    background-color: #595645;
+    color: #ffffff;
+    height: 100%;
+    padding: 0px 3.5px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
   }
 }
