--- a/src/components/Builder/Builder.module.scss
+++ b/src/components/Builder/Builder.module.scss
@@ -1,6 +1,7 @@
 .builder {
   display: flex;
-  height: calc(100vh - 130px);
+  height: 100%;
+  padding: 0 5px;
   position: relative;
 
   .team {
@@ -33,8 +34,8 @@
 
   .button {
     position: absolute;
-    bottom: -5px;
-    right: 0px;
+    bottom: 10px;
+    right: 5px;
     width: 56px;
     height: 56px;
     background-color: var(--badge);
