--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -3,20 +3,18 @@
   place-items: center;
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr);
-  height: fit-content;
-  min-height: calc(100vh - 210px);
-  max-height: calc(100vh - 120px);
+  height: 100%;
+  min-height: 0;
   position: relative;
 
   .container {
     display: flex;
     flex-flow: column nowrap;
     gap: 8px;
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
     min-height: 0;
-    max-width: 1200px;
-    background-color: var(--bgsecondary);
+    padding: 5px;
     transition: all 500ms;
     border-radius: 3px;
   }
