Changelog, about updates, version about, included amazon appstore link

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -58,7 +58,7 @@
 
   .stores {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
     gap: 10px;
 
