More tests for pokemon details, rules and summary page, save summary page settings in store

--- a/src/components/Pokestats/Pokestats.module.scss
+++ b/src/components/Pokestats/Pokestats.module.scss
@@ -32,6 +32,7 @@
       display: flex;
       flex-flow: row nowrap;
       overflow: auto;
+      padding: 1px 8px;
     }
     :global(.ui.secondary.menu .active) {
       background-color: var(--card);
