--- a/src/components/Pokestats/elements/Summary/Summary.module.scss
+++ b/src/components/Pokestats/elements/Summary/Summary.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     width: calc(100% - 10px);
     padding: 0 5px;
+    position: relative;
 
     > button > i {
       margin-left: 5px !important;
@@ -25,6 +26,13 @@
         }
       }
     }
+  }
+
+  .loading {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    color: var(--contrast);
   }
 
   .inner {
