Abstracted export and add game to own component, selectors for appstate in app container, notifaction implementaion, auto select created game

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -54,7 +54,8 @@ $break3: '(min-width:1005px)';
       color: var(--contrast) !important;
     }
 
-    &.darkmode {
+    &.darkmode,
+    &.delete {
       @media (max-width: 550px) {
         padding: 2px;
       }
