Changelog see more button

--- a/src/components/Changelog/Changelog.module.scss
+++ b/src/components/Changelog/Changelog.module.scss
@@ -42,4 +42,11 @@
     background-color: #fed7d7;
     color: #9b2c2c;
   }
+
+  .seeMore {
+    height: 36px;
+    min-height: 36px;
+    width: fit-content;
+    align-self: center;
+  }
 }
