--- a/src/components/Import/Import.module.scss
+++ b/src/components/Import/Import.module.scss
@@ -4,6 +4,42 @@
   gap: 16px;
   color: var(--contrast);
 
+  .customFile {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    width: 80%;
+    height: fit-content;
+    position: relative;
+
+    > .fileText {
+      display: flex;
+      align-items: center;
+      padding: 0 8px;
+      height: 100%;
+      min-width: 50%;
+      background-color: #00000050;
+      color: #ffffff;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+
+    > button {
+      position: relative;
+      border-top-left-radius: unset !important;
+      border-bottom-left-radius: unset !important;
+    }
+
+    .hiddenFile {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: 0;
+    }
+  }
+
   .csv {
     height: 75px;
     width: 60%;
