--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -11,6 +11,12 @@
     .headerLeft {
       display: flex;
       flex-flow: column nowrap;
+
+      > img {
+        height: 80px;
+        width: 100px;
+        align-self: center;
+      }
     }
   }
 
@@ -51,12 +57,6 @@
     display: flex;
     flex-flow: column nowrap;
     gap: 10px;
-  }
-
-  img {
-    height: 80px;
-    width: 100px;
-    align-self: center;
   }
 
   .name {
