--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -1,10 +1,5 @@
 .container {
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-
-  .subcontainer {
-    display: grid;
-    grid-template-columns: repeat(6, minmax(50px, 1fr));
-    gap: 5px;
-  }
+  padding: 8px;
 }
