--- a/src/components/Tracker/elements/Detail/Detail.module.scss
+++ b/src/components/Tracker/elements/Detail/Detail.module.scss
@@ -31,7 +31,7 @@
       content: '';
       border-width: 0.4rem;
       border-style: solid;
-      border-color: transparent transparent transparent #333;
+      border-color: transparent transparent transparent var(--contrast);
       position: absolute;
       top: 1.3rem;
       left: 1rem;
@@ -71,6 +71,7 @@
 
   .dropdown {
     min-height: unset !important;
+    color: black !important;
     > i {
       top: 0 !important;
     }
