--- a/src/components/Calculator/Calculator.module.scss
+++ b/src/components/Calculator/Calculator.module.scss
@@ -1,5 +1,29 @@
 .container {
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  row-gap: 8px;
+  column-gap: 8px;
   padding: 8px;
+
+  .header {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 10px;
+    align-items: center;
+    width: 100%;
+    background-color: var(--card);
+    border-radius: 4px;
+    padding: 8px;
+
+    .button > i {
+      margin-left: 6px !important;
+      margin-right: 0 !important;
+    }
+  }
+
+  .fieldset {
+    background-color: var(--card);
+    border: none;
+    border-radius: 4px;
+  }
 }
